# memora-system

./: .dockerignore  .env.example  .gitignore  AUDIT_REPORT.md  CLAUDE.md  Dockerfile.api  NGROK_DEPLOY.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml  start.ps1  stop.ps1
agent/: README.md  config.yaml.example  install.ps1  install.sh  memora_agent.py
app/: config.py  main.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
mcp/: README.md  requirements.txt  server.py
scripts/: check_connection.py  index_repo.py  migrate_add_audit_log.py  migrate_add_code_reviews.py  migrate_add_codegen.py  migrate_add_dast.py  migrate_add_data_exports.py  migrate_add_digest_notifications.py  migrate_add_docs.py  migrate_add_enterprise.py  migrate_add_enterprise_health.py  migrate_add_executive.py  migrate_add_executive_weekly.py  migrate_add_impact.py  migrate_add_incident_phase2.py  migrate_add_incidents.py  migrate_add_invite_product.py  migrate_add_knowledge.py  migrate_add_llm_providers.py  migrate_add_monitor.py  migrate_add_notifications.py  migrate_add_onboarding.py  migrate_add_orgs.py  migrate_add_password_hash.py  migrate_add_plans.py  migrate_add_products.py  migrate_add_refresh_tokens.py  migrate_add_rules.py  migrate_add_security.py  migrate_supabase_auth.py  pre_deploy_check.py  reset_db.py  run_all_migrations.py  seed_admin.py  setup_db.py  setup_tables.py  simulate_webhook.py  test_assistant_live.py  test_embedder_live.py  test_flow.py  (+1 more)
tests/: conftest.py  test_api_endpoints.py  test_assistant.py  test_auth.py  (+29 more)
(+188 files in other folders)
